--- a/Tron/Tron-Core/Tron-Core.vcxproj
+++ b/Tron/Tron-Core/Tron-Core.vcxproj
@@ -131,13 +131,16 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="source\graphics\window.cpp" />
+    <ClCompile Include="source\maths\mat4.cpp" />
     <ClCompile Include="source\maths\vec2.cpp" />
     <ClCompile Include="source\maths\vec3.cpp" />
     <ClCompile Include="source\maths\vec4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\graphics\window.h" />
+    <ClInclude Include="source\maths\mat4.h" />
     <ClInclude Include="source\maths\maths.h" />
+    <ClInclude Include="source\maths\maths_func.h" />
     <ClInclude Include="source\maths\vec2.h" />
     <ClInclude Include="source\maths\vec3.h" />
     <ClInclude Include="source\maths\vec4.h" />
