--- a/Tron/Tron-Core/Tron-Core.vcxproj
+++ b/Tron/Tron-Core/Tron-Core.vcxproj
@@ -83,7 +83,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <PreprocessorDefinitions>GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLEW_STATIC;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;glew32s.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -130,6 +130,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="source\graphics\shader.cpp" />
     <ClCompile Include="source\graphics\window.cpp" />
     <ClCompile Include="source\maths\mat4.cpp" />
     <ClCompile Include="source\maths\vec2.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="source\maths\vec4.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\graphics\shader.h" />
     <ClInclude Include="source\graphics\window.h" />
     <ClInclude Include="source\maths\mat4.h" />
     <ClInclude Include="source\maths\maths.h" />
@@ -144,6 +146,11 @@
     <ClInclude Include="source\maths\vec2.h" />
     <ClInclude Include="source\maths\vec3.h" />
     <ClInclude Include="source\maths\vec4.h" />
+    <ClInclude Include="source\utility\file_utility.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="source\shaders\basic.frag" />
+    <None Include="source\shaders\basic.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
