--- a/Tron/Tron-Core/Tron-Core.vcxproj
+++ b/Tron/Tron-Core/Tron-Core.vcxproj
@@ -130,11 +130,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="source\graphics\batchrenderer2D.cpp" />
     <ClCompile Include="source\graphics\buffers\buffer.cpp" />
     <ClCompile Include="source\graphics\buffers\indexbuffer.cpp" />
     <ClCompile Include="source\graphics\buffers\vertexarray.cpp" />
     <ClCompile Include="source\graphics\simple2drenderer.cpp" />
     <ClCompile Include="source\graphics\shader.cpp" />
+    <ClCompile Include="source\graphics\sprite.cpp" />
+    <ClCompile Include="source\graphics\static_sprite.cpp" />
     <ClCompile Include="source\graphics\window.cpp" />
     <ClCompile Include="source\maths\mat4.cpp" />
     <ClCompile Include="source\maths\vec2.cpp" />
@@ -142,6 +145,7 @@
     <ClCompile Include="source\maths\vec4.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\graphics\batchrenderer2D.h" />
     <ClInclude Include="source\graphics\buffers\buffer.h" />
     <ClInclude Include="source\graphics\buffers\indexbuffer.h" />
     <ClInclude Include="source\graphics\buffers\vertexarray.h" />
@@ -149,6 +153,8 @@
     <ClInclude Include="source\graphics\renderable2d.h" />
     <ClInclude Include="source\graphics\renderer2d.h" />
     <ClInclude Include="source\graphics\shader.h" />
+    <ClInclude Include="source\graphics\sprite.h" />
+    <ClInclude Include="source\graphics\static_sprite.h" />
     <ClInclude Include="source\graphics\window.h" />
     <ClInclude Include="source\maths\mat4.h" />
     <ClInclude Include="source\maths\maths.h" />
