added fps print

--- a/Tron/Tron-Core/Tron-Core.vcxproj.filters
+++ b/Tron/Tron-Core/Tron-Core.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClInclude Include="source\graphics\sprite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\utility\timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="source\shaders\basic.vert" />
