--- a/Tron/Tron-Core/Tron-Core.vcxproj
+++ b/Tron/Tron-Core/Tron-Core.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="source\graphics\buffers\buffer.cpp" />
     <ClCompile Include="source\graphics\buffers\indexbuffer.cpp" />
     <ClCompile Include="source\graphics\buffers\vertexarray.cpp" />
+    <ClCompile Include="source\graphics\layers\group.cpp" />
     <ClCompile Include="source\graphics\layers\layer.cpp" />
     <ClCompile Include="source\graphics\layers\tilelayer.cpp" />
     <ClCompile Include="source\graphics\simple2drenderer.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="source\graphics\buffers\buffer.h" />
     <ClInclude Include="source\graphics\buffers\indexbuffer.h" />
     <ClInclude Include="source\graphics\buffers\vertexarray.h" />
+    <ClInclude Include="source\graphics\layers\group.h" />
     <ClInclude Include="source\graphics\layers\layer.h" />
     <ClInclude Include="source\graphics\layers\tilelayer.h" />
     <ClInclude Include="source\graphics\simple2drenderer.h" />
