--- a/Tron/Tron-Core/Tron-Core.vcxproj.filters
+++ b/Tron/Tron-Core/Tron-Core.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="source\graphics\layers\tilelayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\graphics\layers\group.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\graphics\window.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\graphics\layers\tilelayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\graphics\layers\group.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
