--- a/Tron/Tron-Core/Tron-Core.vcxproj.filters
+++ b/Tron/Tron-Core/Tron-Core.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="source\graphics\layers\group.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\graphics\texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\graphics\window.h">
@@ -132,6 +135,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\graphics\layers\group.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\graphics\texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\ImageLoad.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
